--- a/variedades.css
+++ b/variedades.css
@@ -192,8 +192,8 @@ h1 {
   flex-direction: column;
   justify-content: start;
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 100px;
+  right: 0;
   width: 100vw;
   max-width: 400px;
   height: 100vh;
@@ -218,7 +218,8 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: max-content;  
+  height: max-content;    
+  background: white;
 }
 
 .modal_descripcion img { 
@@ -240,10 +241,12 @@ h1 {
 .modal_superior {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   height: 600px;
-  margin-top: 30px;
+  width: 100vw;
+  max-width: 400px;
+  margin-top: 30px; 
 }
 
 .modal_superior_img {
@@ -480,47 +483,6 @@ h1 {
   color: #008000;
 }
 
-@media (min-width: 1000px) {
-  /****MODAL*****/
-
-  .modal {
-    width: 50vw;
-    max-width: 90vw;
-    height: 100vh;
-    justify-content: center;
-  }
-
-  .modal_superior {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .modal_superior_img {
-    display: flex;
-    justify-content: center;
-    margin-left: 50px;
-  }
-
-  .modal_inferior {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: space-around;
-    margin: 0 100px;
-  }
-
-  .modal_tamaño_lista select {
-    width: 200px;
-  }
-
-  .modal_sabores_lista select {
-    width: 200px;
-  }
-
-}
-
 @media (min-width: 1400px) {
   h1 {
     margin-top: 100px;
@@ -534,20 +496,14 @@ h1 {
     top: 170px;
   }
 
-  .modal {
-    display: flex;
-    align-items: center;
-    width: 50vw;
-    height: 100vh;
+  .modal {  
+    top: 150px;
   }
 
-  .modal_descripcion {
-    width: 90%;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin-bottom: 50px;
-    padding-bottom: 50px;
-    margin-top: 100px;
+  .modal_descripcion {    
+    width: 100vw;
+    max-width: 400px;  
+    top: 150px;
   }
 
   .header .nav_bar {
